fixing checkbox not aligning

--- a/css/screen.css
+++ b/css/screen.css
@@ -210,6 +210,11 @@ label {
   margin: 0 1.5%;
 }
 
+/* Checkbox alignment fix */
+[type="checkbox"] {
+  width: auto;
+  margin-right: 8px;
+}
 /* ===== LAYOUT STYLES ====== */
 @media screen and (min-width: 600px)  { /*Content size is determined by padding + width + margin.*/
   input {
